*Fix ATSW and Trade Junkie integrations (Thanks to Thrashfinger).
*Faction specific recipes which cannot be acquired by the other side (The choppers and the new 3.2 patterns) are now automatically filtered.
*Fixed a map/mini-map coordinate display issue
*All professions have skill level data added (exception being cooking and JC)

===RC10
*Significantly reduced memory usage over time.
*Database updates (Flags, acquire, etc)
*More datamining/debugging functions
*Datamine tooltip scan tweaks
*Added a reference to AckisRecipeList in alphas as ARL to save on typing.
*Tweaked automatic vendor scanning
*Updated trainers

===RC9
*Optimized the database by removing many duplicate trainer/vendor entries
*Updated code to detect duplicate trainer entries during a scan (only alpha/svn versions)
*Fixed a bug with mini-maps and not displaying mob drops correctly along with an issue with trainers.
*Fixed some accidental globals.
*Now using LibQTipClick-1.1.
*All LibQTip/Click tooltips are now acquired when needed and released when not.
*Completely revamped the look and behavior of the alt tradeskills menu.
*Added alt-click-to-remove on alt names.
*Completely revamped the look and behavior of the acquire tooltip. Now fixed width, and scales with font size.
*Fixed a few nil references.
*All tooltips now fully support TipTac skinning.
*Recipes which are only obtainable from a quest available only to the opposing faction will now display this fact. 
*Code optimization.
*Lunar Festival Recipes updated
*Added in tooltip scanning for the dataminer.

===RC8
*Fixed a bug when you did a scan, the drop down menus for the profession would change text to something non-existant.
*Added all/none functionality for classes, reputations.
*All/none functionality has changed, now you click on the text to select all or none.  There are no individual buttons.  The tooltip explains this in more detail.
*Updated many trainers to coincide with the argent tourney.