@@ -1239,8 +1239,44 @@ local function giveMap()
 					get		= function() return addon.db.profile.minimap end,
 					set		= function() addon.db.profile.minimap = not addon.db.profile.minimap end,
 				},
-				clearmap = {
+				minimap = {
 					order	= 5,
+					type	= "toggle",
+					name	= L["Trainer"],
+					desc	= L["MAP_TRAINER_DESC"],
+					disabled = tomtomsupport,
+					get		= function() return addon.db.profile.maptrainer end,
+					set		= function() addon.db.profile.maptrainer = not addon.db.profile.maptrainer end,
+				},
+				minimap = {
+					order	= 6,
+					type	= "toggle",
+					name	= L["Vendor"],
+					desc	= L["MAP_VENDOR_DESC"],
+					disabled = tomtomsupport,
+					get		= function() return addon.db.profile.mapvendor end,
+					set		= function() addon.db.profile.mapvendor = not addon.db.profile.mapvendor end,
+				},
+				minimap = {
+					order	= 7,
+					type	= "toggle",
+					name	= L["Monster"],
+					desc	= L["MAP_MONSTER_DESC"],
+					disabled = tomtomsupport,
+					get		= function() return addon.db.profile.mapmob end,
+					set		= function() addon.db.profile.mapmob = not addon.db.profile.mapmob end,
+				},
+				minimap = {
+					order	= 8,
+					type	= "toggle",
+					name	= L["Quest"],
+					desc	= L["MAP_QUEST_DESC"],
+					disabled = tomtomsupport,
+					get		= function() return addon.db.profile.mapquest end,
+					set		= function() addon.db.profile.mapquest = not addon.db.profile.mapquest end,
+				},
+				clearmap = {
+					order	= 20,
 					type	= "execute",
 					name	= L["Clear Waypoints"],
 					disabled = tomtomsupport,
