@@ -1553,3 +1553,8 @@ L["Zorbin Fandazzle"] = true
 L["Zula Slagfury"] = true
 L["Zurai"] = true
 L["Recorder Lidio"] = true
+L["Monster"] = true
+L["MAP_TRAINER_DESC"] = "Display trainers on the map."
+L["MAP_VENDOR_DESC"] = "Display vendors on the map."
+L["MAP_MONSTER_DESC"] = "Display monsters on the map."
+L["MAP_QUEST_DESC"] = "Display quests on the map."
