@@ -13,6 +13,7 @@
 *Faction specific recipes which cannot be acquired by the other side (The choppers and the new 3.2 patterns) are now automatically filtered.
 *Fixed a map/mini-map coordinate display issue
 *All professions have skill level data added (exception being cooking and JC)
+*Added the ability to customize which type of points you see on the mini-map (vendor, quest, trainer, mob).  By default trainer will be off, the rest will be on.
 
 ===RC10
 *Significantly reduced memory usage over time.
